# blogger-agent

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  README_zh.md  SKILL.md  blogger.toml  monitor_video.sh  publish.py  pyproject.toml  requirements.txt  test_notebooklm.py  test_script.js  watermark_remover.py
.agents/workflows/: generate-article.md
.antigravitycli/: 68a22c25-dba3-48d9-8ee2-c26239bec205.json
.claude/commands/: write-article.md
articles/test_data/: ARC-AGI.md
docs/: Enable Text-to-Diagram for Agent Integrations.md  architecture.md
docs/agent/: agent memory.md  awesome-harness-engineering.md
docs/blogger/: 程序如何找到浏览器窗口.md
docs/markdown/: 1.Front Matter.md
docs/superpowers/plans/: 2026-05-13-bilibili-fixes.md  2026-05-13-bilibili-integration.md
docs/superpowers/specs/: 2026-05-13-bilibili-integration.md
skills/blogger-agent/: SKILL.md
skills/generate-article/: SKILL.md
skills/generate-video/: SKILL.md
skills/incremental-dev/: SKILL.md
skills/publish-article/: SKILL.md
skills/review-article/: SKILL.md
skills/watermark-remover/: SKILL.md
src/blogger/: cli.py  config.py  mcp_server.py
src/blogger/core/: cdp_chrome.py  chrome.py  jxa_chrome.py  markdown_parser.py
templates/covers/: magazine_cover.py
test_data/: ARC-AGI-文章.md
tests/: test_cover.py  test_dom.py  test_dom_result.json  test_parser_video.py  test_upload.py  test_upload_click.py  test_upload_focus.py  test_upload_paste.py  test_verify.py
tools/: fit_wechat_cover.py  launch-chrome-cdp.sh  launch-chrome-default.sh
tools/stealth-extension/: inject.js  manifest.json
