[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blogger"
version = "0.1.0"
description = "AI Agent automation project for multi-platform article publishing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "王义杰" },
]
dependencies = [
    "loguru",
    "markdown",
    "rookiepy",
    "mcp",
    "python-frontmatter",
    "notebooklm-py",
    "websocket-client",
]

[project.scripts]
blogger = "blogger.cli:main"
blogger-mcp = "blogger.mcp_server:main"

[tool.uv.sources]
notebooklm-py = { git = "https://github.com/xilu0/notebooklm-py.git" }
